// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResultItem render missing version and labels 1`] = `

<div>
  <div class="group relative z-10">
    <a
      href="#"
      class="block rounded-lg border bg-card text-card-foreground shadow-sm duration-250 relative cursor-default transition-all group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
    >
      <div class="p-6 m-0 flex flex-row items-center justify-between rounded-t-lg border-b-[1px] px-4 py-3">
        <button
          data-state="closed"
          class="cursor-default truncate"
        >
          <h3 class="font-semibold tracking-tight text-md truncate">
            item
          </h3>
        </button>
      </div>
      <div class="flex h-12 w-full items-center justify-between gap-4 border-t-[1px] px-4 py-3">
        <div class="flex gap-2">
        </div>
      </div>
    </a>
  </div>
</div>

`;

exports[`ResultItem render stacked many 1`] = `

<div>
  <div class="group relative z-10">
    <div class="absolute left-2 top-2 h-full w-[97.5%] rounded-lg border bg-card transition-all group-hover:border-neutral-400 dark:group-hover:border-neutral-600">
    </div>
    <div class="absolute left-1 top-1 h-full w-[99%] rounded-lg border bg-card transition-all group-hover:border-neutral-400 dark:group-hover:border-neutral-600">
    </div>
    <a
      href="#"
      class="block rounded-lg border bg-card text-card-foreground shadow-sm duration-250 relative cursor-default transition-all group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
    >
      <div class="p-6 m-0 flex flex-row items-center justify-between rounded-t-lg border-b-[1px] px-4 py-3">
        <button
          data-state="closed"
          class="cursor-default truncate"
        >
          <h3 class="font-semibold tracking-tight text-md truncate">
            many-edges-stacked
          </h3>
        </button>
      </div>
      <div class="flex h-12 w-full items-center justify-between gap-4 border-t-[1px] px-4 py-3">
        <div
          class="group font-courier relative z-[1] w-fit flex h-full cursor-default items-center justify-center gap-1.5 rounded border-[1px] border-neutral-200 bg-neutral-100 px-2 py-1 text-[0.75rem] font-medium text-muted-foreground dark:border-[#313131] dark:bg-neutral-800"
          data-state="closed"
        >
          <span class="pt-0.5">
            1.1.1
          </span>
        </div>
        <div class="flex gap-2">
          <div>
            <div class="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 cursor-default bg-lime-500/25 border-[1px] border-lime-600 dark:border-lime-400 text-lime-600 hover:bg-lime-400/40 dark:bg-lime-500/30 dark:text-lime-400 dark:hover:bg-lime-500/40">
              peer
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>

`;

exports[`ResultItem render stacked two 1`] = `

<div>
  <div class="group relative z-10">
    <div class="absolute left-1 top-1 h-full w-[99%] rounded-lg border bg-card transition-all group-hover:border-neutral-400 dark:group-hover:border-neutral-600">
    </div>
    <a
      href="#"
      class="block rounded-lg border bg-card text-card-foreground shadow-sm duration-250 relative cursor-default transition-all group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
    >
      <div class="p-6 m-0 flex flex-row items-center justify-between rounded-t-lg border-b-[1px] px-4 py-3">
        <button
          data-state="closed"
          class="cursor-default truncate"
        >
          <h3 class="font-semibold tracking-tight text-md truncate">
            two-edges-stacked
          </h3>
        </button>
      </div>
      <div class="flex h-12 w-full items-center justify-between gap-4 border-t-[1px] px-4 py-3">
        <div
          class="group font-courier relative z-[1] w-fit flex h-full cursor-default items-center justify-center gap-1.5 rounded border-[1px] border-neutral-200 bg-neutral-100 px-2 py-1 text-[0.75rem] font-medium text-muted-foreground dark:border-[#313131] dark:bg-neutral-800"
          data-state="closed"
        >
          <span class="pt-0.5">
            1.0.0
          </span>
        </div>
        <div class="flex gap-2">
          <div>
            <div class="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 cursor-default bg-fuchsia-500/20 border-[1px] dark:border-fuchsia-400 border-fuchsia-500 text-fuchsia-500 hover:bg-fuchsia-400/30 dark:bg-fuchsia-500/30 dark:text-fuchsia-400 dark:hover:bg-fuchsia-500/40">
              dev
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>

`;

exports[`ResultItem render with item 1`] = `

<div>
  <div class="group relative z-10">
    <a
      href="#"
      class="block rounded-lg border bg-card text-card-foreground shadow-sm duration-250 relative cursor-default transition-all group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
    >
      <div class="p-6 m-0 flex flex-row items-center justify-between rounded-t-lg border-b-[1px] px-4 py-3">
        <button
          data-state="closed"
          class="cursor-default truncate"
        >
          <h3 class="font-semibold tracking-tight text-md truncate">
            item
          </h3>
        </button>
      </div>
      <div class="flex h-12 w-full items-center justify-between gap-4 border-t-[1px] px-4 py-3">
        <div
          class="group font-courier relative z-[1] w-fit flex h-full cursor-default items-center justify-center gap-1.5 rounded border-[1px] border-neutral-200 bg-neutral-100 px-2 py-1 text-[0.75rem] font-medium text-muted-foreground dark:border-[#313131] dark:bg-neutral-800"
          data-state="closed"
        >
          <span class="pt-0.5">
            1.0.0
          </span>
        </div>
        <div class="flex gap-2">
          <div>
            <div class="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 cursor-default bg-cyan-500/25 text-cyan-600 border-[1px] border-cyan-600 dark:border-cyan-500 hover:bg-cyan-500/40 dark:bg-cyan-500/30 dark:text-cyan-500 dark:hover:bg-cyan-500/40">
              prod
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>

`;

exports[`ResultItem render with type 1`] = `

<div>
  <div class="group relative z-10">
    <a
      href="#"
      class="block rounded-lg border bg-card text-card-foreground shadow-sm duration-250 relative cursor-default transition-all group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
    >
      <div class="p-6 m-0 flex flex-row items-center justify-between rounded-t-lg border-b-[1px] px-4 py-3">
        <button
          data-state="closed"
          class="cursor-default truncate"
        >
          <h3 class="font-semibold tracking-tight text-md truncate">
            item
          </h3>
        </button>
        <div class="group font-sans relative z-[1] w-fit flex h-full cursor-default items-center justify-center gap-1.5 rounded border-[1px] border-neutral-200 bg-neutral-100 px-2 py-1 text-[0.75rem] font-medium text-muted-foreground dark:border-[#313131] dark:bg-neutral-800">
          <span
            data-id="info-badge-value"
            class="tabular-nums after:border-[var(--light-border)] pt-0.5 font-courier relative ml-[0.125rem] mr-[calc(var(--width-offset)/2)] tracking-wide text-neutral-700 after:absolute after:-left-[calc(var(--width-offset)/2)] after:-top-[calc(var(--height-offset)/2)] after:z-[-1] after:h-[calc(100%+var(--height-offset))] after:w-[calc(100%+var(--width-offset))] after:rounded-[calc(0.25rem-1px)] after:border-[1px] after:bg-[var(--light-background)] after:content-[&quot;&quot;] group-has-[span[data-id=info-badge-icon]]:ml-[calc(var(--width-offset)/2)] dark:text-foreground dark:after:border-[var(--dark-border)] dark:after:bg-[var(--dark-background)] lowercase"
            style="--width-offset: 1rem; --height-offset: 0.25rem; --dark-background: #0F0F0F; --dark-border: #2A2A2A; --light-background: #FFFFFF; --light-border: #E4E4E7;"
          >
            prod
          </span>
          <span class="flex items-center justify-center">
            dep of: npm:from@1.0.0
          </span>
        </div>
      </div>
      <div class="flex h-12 w-full items-center justify-between gap-4 border-t-[1px] px-4 py-3">
        <div
          class="group font-courier relative z-[1] w-fit flex h-full cursor-default items-center justify-center gap-1.5 rounded border-[1px] border-neutral-200 bg-neutral-100 px-2 py-1 text-[0.75rem] font-medium text-muted-foreground dark:border-[#313131] dark:bg-neutral-800"
          data-state="closed"
        >
          <span class="pt-0.5">
            1.0.0
          </span>
        </div>
        <div class="flex gap-2">
          <div>
            <div class="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 cursor-default bg-cyan-500/25 text-cyan-600 border-[1px] border-cyan-600 dark:border-cyan-500 hover:bg-cyan-500/40 dark:bg-cyan-500/30 dark:text-cyan-500 dark:hover:bg-cyan-500/40">
              prod
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>

`;
